# agentic

docs/: getting-started.md  gmail-tool.md  implementation-plan.md  local-model-examples.md  local-models.md  multi-language-setup.md  project-structure.md  simple-examples.md  smolagents-plan.md
python/smolagents-basic/: .gitignore  GMAIL_SETUP.md  README.md  main.py  pyproject.toml  server.py
python/smolagents-basic/agents/: __init__.py  basic_agent.py
python/smolagents-basic/tools/: __init__.py
python/smolagents-basic/tools/email/: __init__.py  gmail.py
python/smolagents-basic/tools/entertainment/: __init__.py  jokes.py
python/smolagents-basic/tools/math/: __init__.py  calculator.py
